Make sure the scanner device is closed when the dialog is closed

BUG: 314117